--- a/src/components/featured/index.module.scss
+++ b/src/components/featured/index.module.scss
@@ -1,6 +1,6 @@
 .featured{
-    padding-left: 5rem;
-
+    margin: 0 5rem 4rem;
+    position: relative;
     &_num{
         margin: 1rem 0 5rem;
         display: flex;
@@ -24,12 +24,29 @@
         font-size: 2.8rem;
         line-height: 1.1;
         letter-spacing: -.5px;
+        margin: 0 0 3rem;
     }
 
     &_engagements{
         display: flex;
         // gap: 2rem;
         overflow-x: scroll;
+        margin-top: 7rem;
+        // left: -5rem;
         
+        // &_container{
+        //     position: sticky;
+        //     position: absolute;
+        // }
+
+        &::-webkit-scrollbar-track{
+            background-color: rgb(156, 155, 155);
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: #000;
+        }
+        &::-webkit-scrollbar{
+            height: .15rem;
+        }
     }
 }
